// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Basics|Grid col 1`] = `
Array [
  .emotion-0 {
  background: silver;
  display: inline-block;
  padding: 20px;
}

<span
    class="emotion-0"
    color="silver"
  />,
  .emotion-3 {
  display: inline-block;
  vertical-align: inherit;
}

.emotion-3 > * {
  margin-left: 10px;
  vertical-align: inherit;
}

.emotion-3 > *:first-child {
  margin-left: 0;
}

.emotion-0 {
  background: hotpink;
  display: inline-block;
  padding: 20px;
}

<div
    class="emotion-3"
  >
    <span
      class="emotion-0"
    />
    <span
      class="emotion-0"
    />
    <span
      class="emotion-0"
    />
  </div>,
  .emotion-0 {
  background: silver;
  display: inline-block;
  padding: 20px;
}

<span
    class="emotion-0"
    color="silver"
  />,
]
`;

exports[`Storyshots Basics|Grid col outer 1`] = `
Array [
  .emotion-0 {
  background: silver;
  display: inline-block;
  padding: 20px;
}

<span
    class="emotion-0"
    color="silver"
  />,
  .emotion-0 {
  background: hotpink;
  display: inline-block;
  padding: 20px;
}

.emotion-3 {
  display: inline-block;
  vertical-align: inherit;
  margin-left: 10px;
  margin-right: 10px;
}

.emotion-3 > * {
  margin-left: 10px;
  vertical-align: inherit;
}

.emotion-3 > *:first-child {
  margin-left: 0;
}

<div
    class="emotion-3"
  >
    <span
      class="emotion-0"
    />
    <span
      class="emotion-0"
    />
    <span
      class="emotion-0"
    />
  </div>,
  .emotion-0 {
  background: silver;
  display: inline-block;
  padding: 20px;
}

<span
    class="emotion-0"
    color="silver"
  />,
]
`;

exports[`Storyshots Basics|Grid row 1`] = `
Array [
  .emotion-0 {
  background: silver;
  padding: 20px;
}

<div
    class="emotion-0"
    color="silver"
  />,
  .emotion-3 > * {
  margin-top: 10px;
}

.emotion-3 > *:first-child {
  margin-top: 0;
}

.emotion-0 {
  background: hotpink;
  padding: 20px;
}

<div
    class="emotion-3"
  >
    <div
      class="emotion-0"
    />
    <div
      class="emotion-0"
    />
    <div
      class="emotion-0"
    />
  </div>,
  .emotion-0 {
  background: silver;
  padding: 20px;
}

<div
    class="emotion-0"
    color="silver"
  />,
]
`;

exports[`Storyshots Basics|Grid row multiply 1`] = `
Array [
  .emotion-0 {
  background: silver;
  padding: 20px;
}

<div
    class="emotion-0"
    color="silver"
  />,
  .emotion-0 {
  background: hotpink;
  padding: 20px;
}

.emotion-3 {
  margin-top: 5px;
  margin-bottom: 5px;
}

.emotion-3 > * {
  margin-top: 30px;
}

.emotion-3 > *:first-child {
  margin-top: 0;
}

<div
    class="emotion-3"
  >
    <div
      class="emotion-0"
    />
    <div
      class="emotion-0"
    />
    <div
      class="emotion-0"
    />
  </div>,
  .emotion-0 {
  background: silver;
  padding: 20px;
}

<div
    class="emotion-0"
    color="silver"
  />,
]
`;

exports[`Storyshots Basics|Grid row outer 1`] = `
Array [
  .emotion-0 {
  background: silver;
  padding: 20px;
}

<div
    class="emotion-0"
    color="silver"
  />,
  .emotion-0 {
  background: hotpink;
  padding: 20px;
}

.emotion-3 {
  margin-top: 10px;
  margin-bottom: 10px;
}

.emotion-3 > * {
  margin-top: 10px;
}

.emotion-3 > *:first-child {
  margin-top: 0;
}

<div
    class="emotion-3"
  >
    <div
      class="emotion-0"
    />
    <div
      class="emotion-0"
    />
    <div
      class="emotion-0"
    />
  </div>,
  .emotion-0 {
  background: silver;
  padding: 20px;
}

<div
    class="emotion-0"
    color="silver"
  />,
]
`;
